// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<React.Fragment>
  <TBCheckBox
    id="tabGroupCloseAll"
    label="Close all currently opened tabs and windows"
    onToggle={[Function]}
    value="false"
  />
  <TBCheckBox
    id="tabGroupCloseInactiveTabs"
    label="Automatically close all unresponsive tabs opened by this tab group"
    onToggle={[Function]}
    value="true"
  />
  <TBCheckBox
    id="tabGroupDontAskAgain"
    label="Save all selected options and do not show this message again (All settings offered in this popup can still be changed for any tab group. Just click the cog wheel for the tab group you want to change)."
    onToggle={[Function]}
    value="true"
  />
</React.Fragment>
`;

exports[`Test <ETGMLaunchGroupsModal /> component behaviour at mount Test renderLaunchOptions() Examine the function, when this.props.data and this.props.data.params are valid Run renderLaunchOptions(): The output based on the preset props should match the snapshot. Evaluate the snapshot after every run of this test case. 1`] = `
<React.Fragment>
  <TBCheckBox
    id="tabGroupCloseAll"
    label="Close all currently opened tabs and windows"
    onToggle={[Function]}
    value="false"
  />
  <TBCheckBox
    id="tabGroupCloseInactiveTabs"
    label="Automatically close all unresponsive tabs opened by this tab group"
    onToggle={[Function]}
    value="true"
  />
  <TBCheckBox
    id="tabGroupDontAskAgain"
    label="Save all selected options and do not show this message again (All settings offered in this popup can still be changed for any tab group. Just click the cog wheel for the tab group you want to change)."
    onToggle={[Function]}
    value="true"
  />
</React.Fragment>
`;

exports[`Test <ETGMLaunchGroupsModal /> component behaviour at mount Test renderModalBody() Run renderModalBody():  The output based on the preset props should match the snapshot. Evaluate the snapshot after every run of this test case. 1`] = `
<React.Fragment>
  <p>
    Warning: You are about to launch a group consisting of 
    undefined number of 
     windows and 
    undefined number of 
     tabs. This might stress your computer down in the long run
  </p>
  <React.Fragment>
    <TBCheckBox
      id="tabGroupCloseAll"
      label="Close all currently opened tabs and windows"
      onToggle={[Function]}
      value="false"
    />
    <TBCheckBox
      id="tabGroupCloseInactiveTabs"
      label="Automatically close all unresponsive tabs opened by this tab group"
      onToggle={[Function]}
      value="true"
    />
    <TBCheckBox
      id="tabGroupDontAskAgain"
      label="Save all selected options and do not show this message again (All settings offered in this popup can still be changed for any tab group. Just click the cog wheel for the tab group you want to change)."
      onToggle={[Function]}
      value="true"
    />
  </React.Fragment>
</React.Fragment>
`;
